@@ -1,4 +1,13 @@
 ------------------------------------------------------------------------
+r2128 | gaser | 2022-11-07 22:48:43
+
+Changed paths:
+ M CHANGES.txt
+A  doc/css/cat.css
+
+
+Added: Added css style file for entry page.
+------------------------------------------------------------------------
 r2127 | gaser | 2022-11-07 22:48:21
 
 Changed paths:
